--- a/index.html
+++ b/index.html
@@ -3,21 +3,22 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Blog</title>
+  <title>Vorlesungszusammenfassungen</title>
   <link rel="stylesheet" href="styles.css">
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;700&family=Source+Sans+3:wght@400;500;600&display=swap" rel="stylesheet">
 </head>
 <body>
   <header>
     <div class="header-inner">
-      <h1>Blog</h1>
+      <h1>Vorlesungszusammenfassungen</h1>
+      <span style="color:rgba(255, 255, 255, 0.5);">/ Delikatess AI Slop</span>
     </div>
   </header>
 
   <div class="container">
     <aside>
       <nav>
-        <h2 class="nav-title">Posts</h2>
+        <h2 class="nav-title">Vorlesungen</h2>
         <ul id="nav"></ul>
       </nav>
     </aside>
