fuck you brendan eich

--- a/index.html
+++ b/index.html
@@ -16,13 +16,20 @@
     </div>
   </header>
 
-  <div id="mySidenav" class="sidenav"></div>
+  <div id="mySidenav" class="sidenav">
+  </div>
 
   <div class="container">
     <aside>
       <nav>
         <h2 class="nav-title">Vorlesungen</h2>
-        <ul id="nav"></ul>
+
+        <ul id="nav">
+          <div class="loading">
+            <div class="spinner"></div>
+            <p>Loading Nav...</p>
+          </div>
+        </ul>
       </nav>
     </aside>
 
